fixed messages not showing, working on css

--- a/client/src/components/Chat/style.css
+++ b/client/src/components/Chat/style.css
@@ -13,13 +13,13 @@
     margin-right: 30px;
     margin-left: 25px;
     overflow: hidden;
+    padding-right: 0;
 }
 
 .tab{
     height: 30px;
     font-size: small;
     background-color: rgb(93, 146, 192);
-    margin-bottom: 10px;
     text-align: center;
     border-color: rgb(85, 76, 76);
     border-style: solid;
@@ -33,21 +33,23 @@
 
 .menu{
     background-color: rgb(105, 184, 236);
-    height: 90%;
+    height: 100%;
+    width: 300%;
     overflow-y: scroll;
     overflow-x: hidden;
 }
 
 .add-item{
-    height: 100%;
-    background-color: rgb(93, 146, 192);
+    width: 100%;
+    /* height: 100%; */
+    background-color:aliceblue;
+    bottom: 0;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
 }
 
 .button{
-    align-self: center;
-    width: 100%;
-    margin-top: 2px;
-    margin-bottom: 2px;
+    bottom: 0;
 }
 
 .chat{
@@ -77,7 +79,7 @@
 }
 
 .message{
-    /* height: 10px; */
+    padding-left: 15px;
 }
 
 .status{
@@ -92,4 +94,8 @@
     /* border-style: solid;
     border-color: red;
     border-width: 1px; */
+}
+
+.line{
+    height: 0;
 }
